--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,6 +32,7 @@ subjects:
 - !lcc 'T'
 - !lcsh 'Technology -- Periodicals'
 - !lcsh 'Science -- Periodicals'
+- GITenberg
 title: 'Scientific American magazine, Vol. 2 Issue 1
 
   The advocate of Industry and Journal of Scientific,
